--- a/Example/LancooPhotoBrowser/LancooPhotoBrowser-Info.plist
+++ b/Example/LancooPhotoBrowser/LancooPhotoBrowser-Info.plist
@@ -45,5 +45,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许访问你的相机？</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否允许访问你的麦克风？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许访问你的相册？</string>
 </dict>
 </plist>
